objects/Lead_Division_Mapping_From_Subdivision__mdt.object
<CustomObject>
    <description>Lead SubDivision = PowerEquipment , Marine ,Engine  then Division is &apos;P&apos;

Lead SubDivision = Honda  then Division is &apos;A&apos;

SubDivision = Acura , NSX  then Division is &apos;B&apos;

SubDivision = Motorcycle then Division is &apos;M&apos;</description>
    <fields>
        <fullName>Division_CD__c</fullName>
        <label>Division_CD</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Recortype_API_name__c</fullName>
        <label>Opp_Recortype_API_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <label>Subdivision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead_Division_Mapping_From_Subdivision</label>
    <pluralLabel>Lead_Division_Mapping_From_Subdivision</pluralLabel>
</CustomObject>